more css fixes and working on product tile alignment

--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -324,7 +324,7 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 
 @media (max-width: 490px) {
   .button.button-block-start-screen {
-    width: 350px;
+    width: 95vw;
   }
   .start-text {
     font-size: 0px;
@@ -494,6 +494,16 @@ h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
 .side-nav-filter {
   margin-top: 1px;
   margin-left: -1px;
+}
+
+.filter-text {
+  color: #ffffff;
+  margin-left: 100px;
+}
+@media (max-width: 767px) {
+  .filter-text {
+    margin-left: 0;
+  }
 }
 
 /**
@@ -832,7 +842,7 @@ body.has-active-menu {
 
 @media (max-width: 991px) {
   .product-tile {
-    height: avw;
+    height: 20vw;
   }
 }
 
@@ -840,6 +850,10 @@ body.has-active-menu {
   .product-tile {
     height: auto;
   }
+}
+
+#bookmark-body .product-tile {
+  height: auto;
 }
 
 .side-nav-wrapper {
@@ -925,12 +939,13 @@ body.has-active-menu {
 
 }
 #product-overview-body .product-tile {
-  height: 26vw;
+  /* height: 26vw; */
+  height: auto;
 }
 
 @media (max-width: 991px) {
   #product-overview-body .product-tile {
-    height: 36vw;
+    /* height: 36vw; */
   }
 }
 
@@ -1276,6 +1291,7 @@ p {
   /* background-color: $stable; */
   font-weight: bold;
   padding: 16px 0 0;
+  margin-bottom: 6px;
 }
 
 .list .item.item-accordion {
@@ -1307,7 +1323,7 @@ p {
   display: block !important;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 767px) {
   .description-item {
     background-color: $stable;
     padding: 16px;
@@ -1460,6 +1476,22 @@ ion-popover-view.fit ion-content {
 
 img {
   max-width: 100%;
+}
+
+#floating-button .icon.menu-icon,
+#floating-menu .icon.menu-icon {
+  line-height: 58px;
+}
+
+/* swiper slider */
+.swiper-pagination-bullet-active {
+  background-color: #ffffff !important;
+}
+.swiper-pagination-bullet {
+  background-color: #f3f3f3 !important;
+}
+.swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction {
+  bottom: 2px !important;
 }
 
 .SyntaxLTStd-Bold {
